# taskwarrior

./: .pre-commit-config.yaml  CMakeLists.txt  ChangeLog
.github/workflows/: docker-image.yaml  tests.yaml
doc/man/: task-color.5.in  taskrc.5.in
doc/rc/: dark-16.theme  dark-256.theme  dark-blue-256.theme  dark-gray-256.theme  dark-green-256.theme  dark-red-256.theme  dark-violets-256.theme  dark-yellow-green.theme  light-16.theme  light-256.theme  no-color.theme  solarized-light-256.theme
scripts/vim/syntax/: taskrc.vim
src/: CMakeLists.txt  Context.cpp  Operation.cpp  Operation.h  TDB2.cpp  TDB2.h  Task.cpp  Task.h
src/commands/: CmdInfo.cpp  CmdNews.cpp  CmdNews.h  CmdShow.cpp  CmdUndo.cpp  CmdUndo.h
src/taskchampion-cpp/: CMakeLists.txt  Cargo.toml
src/taskchampion-cpp/src/: lib.rs
test/: CMakeLists.txt  info.test.py  tw-1999.test.py  undo.test.py
